<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundgradiente"
    tools:context=".actividades.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:elevation="14dp"
            >

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primaryColor" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:src="@drawable/ic_person_con"
                android:layout_gravity="center|top" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vadt_teacher"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/whiteTextColor"
                android:textStyle="bold"
                android:textSize="17dp"
                android:layout_marginTop="10dp"/>

        </FrameLayout>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/primaryDarkColor"
        app:cardElevation="8dp"
        android:layout_gravity="top|center"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:outlineSpotShadowColor="@color/whiteTextColor">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inicia_sesion"
                android:paddingTop="50dp"
                android:textAlignment="center"
                android:textColor="@color/whiteTextColor"
                android:textSize="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_person_con"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="5dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/whiteTextColor"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/correo_electronico"
                        android:textColor="@color/whiteTextColor"
                        android:background="#00000000"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_person_con"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="5dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/whiteTextColor"

                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/contrasena"
                        android:background="#00000000"
                        android:textColor="@color/whiteTextColor"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingresar"
                android:background="@color/primaryColor"
                android:textColor="@color/whiteTextColor"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="28dp"
                android:layout_marginRight="28dp"/>

        </LinearLayout>





    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¿No tienes cuenta?"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrate_aqui"
            android:layout_marginLeft="5dp"
            android:textSize="15sp"
            android:textColor="@color/primaryColor"
            android:textStyle="bold"
            />

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>